--- a/onion/onion/onion.vcxproj
+++ b/onion/onion/onion.vcxproj
@@ -71,8 +71,8 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>C:\devel\glew-2.1.0-win32\glew-2.1.0\include;C:\devel\soil\Simple OpenGL Image Library\src;C:\devel\glfw-3.2.1.bin\glfw-3.2.1.bin.WIN32\include;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\devel\glew-2.1.0-win32\glew-2.1.0\lib\Release\Win32;C:\devel\soil\Simple OpenGL Image Library\lib;C:\devel\glfw-3.2.1.bin\glfw-3.2.1.bin.WIN32\lib-vc2015;$(LibraryPath)</LibraryPath>
+    <IncludePath>C:\Users\Zach\Documents\GitHub\onion\onion\onions\include;C:\devel\glew-2.1.0-win32\glew-2.1.0\include;C:\devel\soil\Simple OpenGL Image Library\src;C:\devel\glfw-3.2.1.bin\glfw-3.2.1.bin.WIN32\include;$(IncludePath)</IncludePath>
+    <LibraryPath>$(SolutionDir)bin\$(Configuration)\;C:\devel\glew-2.1.0-win32\glew-2.1.0\lib\Release\Win32;C:\devel\soil\Simple OpenGL Image Library\lib;C:\devel\glfw-3.2.1.bin\glfw-3.2.1.bin.WIN32\lib-vc2015;$(LibraryPath)</LibraryPath>
     <OutDir>$(SolutionDir)bin\$(Configuration)\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -80,8 +80,8 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>C:\devel\glew-2.1.0-win32\glew-2.1.0\include;C:\devel\soil\Simple OpenGL Image Library\src;C:\devel\glfw-3.2.1.bin\glfw-3.2.1.bin.WIN32\include;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\devel\glew-2.1.0-win32\glew-2.1.0\lib\Release\Win32;C:\devel\soil\Simple OpenGL Image Library\lib;C:\devel\glfw-3.2.1.bin\glfw-3.2.1.bin.WIN32\lib-vc2015;$(LibraryPath)</LibraryPath>
+    <IncludePath>C:\Users\Zach\Documents\GitHub\onion\onion\onions\include;C:\devel\glew-2.1.0-win32\glew-2.1.0\include;C:\devel\soil\Simple OpenGL Image Library\src;C:\devel\glfw-3.2.1.bin\glfw-3.2.1.bin.WIN32\include;$(IncludePath)</IncludePath>
+    <LibraryPath>$(SolutionDir)bin\$(Configuration)\;C:\devel\glew-2.1.0-win32\glew-2.1.0\lib\Release\Win32;C:\devel\soil\Simple OpenGL Image Library\lib;C:\devel\glfw-3.2.1.bin\glfw-3.2.1.bin.WIN32\lib-vc2015;$(LibraryPath)</LibraryPath>
     <OutDir>$(SolutionDir)bin\$(Configuration)\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -98,7 +98,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>opengl32.lib;glew32s.lib;glfw3.lib;SOIL.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>onions.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -129,7 +129,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>opengl32.lib;glew32s.lib;glfw3.lib;SOIL.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>onions.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -150,19 +150,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="src\fileio.cpp" />
     <ClCompile Include="src\main.cpp" />
-    <ClCompile Include="src\math.cpp" />
-    <ClCompile Include="src\object.cpp" />
-    <ClCompile Include="src\world.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="include\game.h" />
-    <ClInclude Include="include\graphics.h" />
-    <ClInclude Include="include\interface.h" />
-    <ClInclude Include="include\math.h" />
-    <ClInclude Include="include\object.h" />
-    <ClInclude Include="include\world.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
