Sprite Loading, Matrices
Made some changes to matrices, and fixed loading sprites from meta
files.

--- a/onion/onioneditor/onioneditor.vcxproj
+++ b/onion/onioneditor/onioneditor.vcxproj
@@ -155,6 +155,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="editor.h" />
+    <ClInclude Include="gui.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
