World Scroll Bar
Fixed WorldOrthographicFrame::adjust_camera, and implemented a scroll
bar in the editor that adjusts the camera.
(Also fixed the gitignore, because I forgot to include that in the last
commit, and cleaned up some files in the bin folder.)

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,23 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+# Visual Studio junk
+*/.vs/*
+*/ipch/*
+*.VC.db
+*.sln
+*.vcxproj
+*.vcxproj.filters
+*.vcxproj.user
+*.obj
+*.obj.enc
+*.idb
+*.ilk
+*.log
+*.pdb
+*.tlog
+*.lastbuildstate
+
 # =========================
 # Operating System Files
 # =========================
